Style changes: create css variables and change primary color of project Fix bug on poster page: poster content took blank space. Feature update: update visible and scrolling number for carousel on poster page

--- a/ui/src/app/film/film.component.css
+++ b/ui/src/app/film/film.component.css
@@ -10,11 +10,7 @@
 }
 
 .trailer-btn:hover {
-  background: #ff001b;
-}
-
-.cl-orangered {
-  color: orangered;
+  background: var(--primary-red);
 }
 
 .cl-white-hover:hover {
@@ -22,7 +18,7 @@
 }
 
 .select-day {
-  background: linear-gradient(#6e6e7c, #393939);
+  background: linear-gradient(#222023, #19171a);
 }
 
 .session-dates {
