--- a/ui/src/app/header/header.component.css
+++ b/ui/src/app/header/header.component.css
@@ -1,4 +1,5 @@
 header {
-  max-height: 60px;
+  max-height: var(--header-height);
+  min-height: var(--header-height);
   overflow: hidden;
 }
