--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -1,6 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 
+:root {
+  --primary-red: #ff001b;
+  --header-height: 60px;
+}
+
+.cl-primary {
+  color: var(--primary-red);
+}
+
+.cl-primary-hover:hover {
+  color: var(--primary-red);
+}
+
+.bg-cl-primary {
+  background: var(--primary-red);
+}
+
+.bg-primary-hover:hover {
+  background: var(--primary-red);
+}
+
 * {
   font-family: Lato, sans-serif;
 }
